[package]
name = "mintbase-interview-rust-task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
yahoo_finance_api = "1.2.2"

[dev-dependencies]
chrono = "0.4.19"
